# GPTBioInsightor

./: .pre-commit-config.yaml  LICENSE  README.md  README_cn.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-package.yml  test.yml
docs/: .readthedocs_cn.yaml  requirements.txt
docs/en/: .readthedocs.yaml
docs/en/source/: api.md  conf.py  index.md  models.md  quickstart.md  release.md  seurat_usage.md
docs/en/source/tutorials/: check_celltype.md  get_celltype.md  get_subtype.md  index.md  pathway.ipynb  seurat_usage.md  user_defined_score.md
docs/zh_CN/source/: api.md  conf.py  index.md  installation.md  models.md  quickstart.md  release.md  seurat_usage.md
docs/zh_CN/source/tutorials/: check_celltype.md  get_celltype.md  get_subtype.md  index.md  pathway.ipynb  seurat_usage.md  user_defined_score.md
gptbioinsightor/: __init__.py  celltype.py  constant.py  core.py  exception.py  gsea.py  logging_utils.py  pathway.py  prompt.py  structure.py  utils.py
gptbioinsightor/prompt/: __init__.py  _celltype.py  _pathway.py
tests/: conftest.py  test_agent_cls.py  test_pathway.py  test_query_celltype.py  test_query_model.py  test_structure.py  test_utils.py
tests/data/: pbmc.markers.fil.csv
