[project]
name = "gptbioinsightor"
dynamic = ["version"]
description = "GPTBioInsightor utilizes the powerful capabilities of large language models to help people quickly gain knowledge and insight, enhancing their work efficiency."
authors = [{ name = "Shenghui Huang", email = "hsh-me@outlook.com" }]
license = { text = "BSD 3-Clause" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "openai>=1.31.0",
    "scanpy>=1.9.0",
    "anthropic>=0.33.0",
    "frozendict>=2.4.0",
    "gseapy>=1.1.0",
    "instructor>=1.7.0",
    "litellm==1.57.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3"
]

[project.urls]
Homepage = "https://github.com/huang-sh/GPTBioInsightor"
Repository = "https://github.com/huang-sh/GPTBioInsightor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "gptbioinsightor/__init__.py"

[tool.ruff.lint.per-file-ignores]
"gptbioinsightor/__init__.py" = ["F403"]